// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportExportDialogFactory getReportExportDialogForAssessment expected properties are set 1`] = `
<ReportExportComponent
  afterDialogDismissed={[Function]}
  deps={
    Object {
      "detailsViewActionMessageCreator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "addPathForValidation": [Function],
        "cancelStartOver": [Function],
        "cancelStartOverAllAssessments": [Function],
        "changeAssessmentVisualizationState": [Function],
        "changeManualRequirementStatus": [Function],
        "changeManualTestStatus": [Function],
        "clearPathSnippetData": [Function],
        "closePreviewFeaturesPanel": [Function],
        "closeScopingPanel": [Function],
        "closeSettingsPanel": [Function],
        "continuePreviousAssessment": [Function],
        "copyIssueDetailsClicked": [Function],
        "dispatcher": undefined,
        "editFailureInstance": [Function],
        "leftNavPanelExpanded": [Function],
        "loadAssessment": [Function],
        "removeFailureInstance": [Function],
        "rescanVisualization": [Function],
        "saveAssessment": [Function],
        "setAllUrlsPermissionState": [Function],
        "setFeatureFlag": [Function],
        "startOverAllAssessments": [Function],
        "switchToTargetTab": [Function],
        "telemetryFactory": undefined,
        "undoManualRequirementStatusChange": [Function],
        "undoManualTestStatusChange": [Function],
      },
      "getCurrentDate": [Function],
      "getDateFromTimestamp": [Function],
      "reportExportServiceProvider": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "services": undefined,
      },
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
      },
    }
  }
  dismissExportDialog={[Function]}
  featureFlagStoreData={Object {}}
  getExportDescription={[Function]}
  htmlGenerator={[Function]}
  isOpen={true}
  jsonGenerator={[Function]}
  pageTitle="command-bar-test-tab-title"
  reportExportFormat="Assessment"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
      Object {
        "generateMenuItem": null,
        "key": "json",
      },
      Object {
        "generateMenuItem": null,
        "key": "codepen",
      },
    ]
  }
  scanDate={2021-02-07T05:02:00.000Z}
  updatePersistedDescription={[Function]}
/>
`;

exports[`ReportExportDialogFactory getReportExportDialogForFastPass expected properties are set 1`] = `
<ReportExportComponent
  afterDialogDismissed={[Function]}
  deps={
    Object {
      "detailsViewActionMessageCreator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "addPathForValidation": [Function],
        "cancelStartOver": [Function],
        "cancelStartOverAllAssessments": [Function],
        "changeAssessmentVisualizationState": [Function],
        "changeManualRequirementStatus": [Function],
        "changeManualTestStatus": [Function],
        "clearPathSnippetData": [Function],
        "closePreviewFeaturesPanel": [Function],
        "closeScopingPanel": [Function],
        "closeSettingsPanel": [Function],
        "continuePreviousAssessment": [Function],
        "copyIssueDetailsClicked": [Function],
        "dispatcher": undefined,
        "editFailureInstance": [Function],
        "leftNavPanelExpanded": [Function],
        "loadAssessment": [Function],
        "removeFailureInstance": [Function],
        "rescanVisualization": [Function],
        "saveAssessment": [Function],
        "setAllUrlsPermissionState": [Function],
        "setFeatureFlag": [Function],
        "startOverAllAssessments": [Function],
        "switchToTargetTab": [Function],
        "telemetryFactory": undefined,
        "undoManualRequirementStatusChange": [Function],
        "undoManualTestStatusChange": [Function],
      },
      "getCurrentDate": [Function],
      "getDateFromTimestamp": [Function],
      "reportExportServiceProvider": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "services": undefined,
      },
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
      },
    }
  }
  dismissExportDialog={[Function]}
  featureFlagStoreData={Object {}}
  getExportDescription={[Function]}
  htmlGenerator={[Function]}
  isOpen={true}
  jsonGenerator={[Function]}
  pageTitle="command-bar-test-tab-title"
  reportExportFormat="AutomatedChecks"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
      Object {
        "generateMenuItem": null,
        "key": "codepen",
      },
    ]
  }
  scanDate={2019-03-12T09:00:00.000Z}
  updatePersistedDescription={[Function]}
/>
`;
